# emote.farm

./: .gitignore  cargo.toml  db.sqlite  package.json  pnpm-lock.yaml
apps/service/: 7tv.go  Cargo.toml  bttv.go  channels.json  go.mod  go.sum  main.go  queries.txt  sse.go
apps/service/migrations/2023-05-21-005936_init/: up.sql
apps/service/migrations/2023-05-22-185615_remove_chatter_name_column/: down.sql  up.sql
apps/service/src/: irc.rs  lib.rs  main.rs  models.rs  occurence.rs  schema.rs
apps/web/: package.json  vite.config.ts
apps/web/app/: root.tsx
apps/web/app/routes/: _index.tsx
apps/web/src/lib/: debounce.ts
apps/web/src/lib/components/: emote-table.svelte  line-chart.svelte
apps/web/src/routes/: +layout.svelte  +page.svelte
apps/web/src/routes/[channel]/: +page.svelte
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql
