[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.4", features = ["sqlite"] }
tokio = {version = "1.28.1", features = ["full"]}
twitch-irc = "5.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
axum = "0.6.18"
tower-http = { version = "0.4.0", features = ["cors"] }
chrono = { version = "0.4.24", features = ["serde"] }
edgedb-tokio = "0.4.0"
anyhow = "1.0.71"
edgedb-protocol = "0.5.0"

